  EntityApplicationPanel.getUser() improved using the above
  AbstractEntityConnectionProvider.initializeDomain() removed, domain initialized in doConnect()
  UiUtil.selectValue() and selectValues() overloaded with defaultSelection parameter
  SonarQube run
0.11.3
  Messages refactored into multiple class specific resource bundles
  EntityEditModel read only status linked to allowInsert, allowUpdate and allowDelete, related refactoring of DefaultEntityEditModel
  DefaultEntityEditModel, unnecessary string constants removed
  Sonar run
  FrameworkMessages refactored into multiple class specific resource bundles
  AbstractEntityConnectionProvider now sets the connectedState on connect and disconnect
  AbstractEntityConnectionProviderTest added
  All interfaces in package org.jminor.swing.common.model.table moved to org.jminor.common.model.table, related classes refactored
  Module org.jminor.framework.model-unittests removed, classes moved to test source path of module org.jminor.framework.model
  Resources folder contents split among relevant modules
  Gradle modules renamed to reflect artifact name
  IntelliJ Java code formatting
  EntityTableModel.getEntitiesByPropertyValue() removed, Entities.getEntitiesByValue() added as replacement
  FilteredTableModel.rowColumn() moved to RowColumn
  Some unit test improvements, continued
  TableSortModel.getSortingDirective() and getSortingPriority() replaced with getSortingState()
  Util.map() return type changed from Map<T, Collection<V>> to Map<T, List<V>>
  LocalEntityConnection.selectMany(List<Entity.Key> keys) now handles keys with different entityIds
  SwingEntityTableModel bug fixed, adding entities on insert now filters out entities of different type
  HttpEntityConnection.selectMany(List<Entity.Key> keys) now handles keys with different entityIds
  HttpEntityConnection.delete(List<Entity.Key> keys) now handles keys with different entityIds