@@ -499,7 +499,7 @@ public abstract class EntityEditPanel extends JPanel implements DialogExceptionH
     return Controls.control(this::insert, FrameworkMessages.get(FrameworkMessages.INSERT),
             States.aggregateState(Conjunction.AND, getActiveObserver(), editModel.getAllowInsertObserver()),
             FrameworkMessages.get(FrameworkMessages.INSERT_TIP) + ALT_PREFIX + mnemonic + ")",
-            mnemonic.charAt(0), null, Images.loadImage("Add16.gif"));
+            mnemonic.charAt(0), null, Images.loadImage(Images.IMG_ADD_16));
   }
 
   /**
@@ -514,7 +514,7 @@ public abstract class EntityEditPanel extends JPanel implements DialogExceptionH
     return Controls.control(this::save, FrameworkMessages.get(FrameworkMessages.INSERT),
             States.aggregateState(Conjunction.AND, getActiveObserver(), insertUpdateState),
             FrameworkMessages.get(FrameworkMessages.INSERT_UPDATE_TIP) + ALT_PREFIX + mnemonic + ")",
-            mnemonic.charAt(0), null, Images.loadImage("Add16.gif"));
+            mnemonic.charAt(0), null, Images.loadImage(Images.IMG_ADD_16));
   }
 
   /**
@@ -2104,14 +2104,6 @@ public abstract class EntityEditPanel extends JPanel implements DialogExceptionH
     return property.isReadOnly() || (property instanceof Property.ColumnProperty && !((Property.ColumnProperty) property).isUpdatable());
   }
 
-  private interface EntitiesInsertedListener {
-    /**
-     * Called when the given entities have been inserted
-     * @param entities the inserted entities
-     */
-    void entitiesInserted(final List<Entity> entities);
-  }
-
   private static final class InsertEntityAction extends AbstractAction {
 
     private final JComponent component;
@@ -2140,6 +2132,8 @@ public abstract class EntityEditPanel extends JPanel implements DialogExceptionH
       this.panelProvider = panelProvider;
       this.connectionProvider = connectionProvider;
       this.listener = listener;
+      this.component.addPropertyChangeListener("enabled", evt -> setEnabled((Boolean) evt.getNewValue()));
+      setEnabled(component.isEnabled());
     }
 
     @Override
